--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,9 @@
             </div>
         </form>
     </div>
+<script src="/socket.io/socket.io.js?v=1"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/chat.js"></script>
+    <script src="/js/chat_ui.js"></script>
 </body>
 </html>
